# xbrl-us-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
.well-known/: mcp-config
src/: __init__.py  index.py
src/funcs/: __init__.py  middleware.py
