[project]
name = "xbrl-us-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.8.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
    "smithery>=0.1.3",
    "xbrl-us>=1.0.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "wrds>=3.3.0",
]
