[project]
name = "xbrl-us-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
    "smithery>=0.4.2",
    "xbrl-us>=1.0.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1"
]


[project.scripts]
dev = "smithery.cli.dev:main" # Run the MCP server in development mode
start = "smithery.cli.start:main" # Run the MCP server in production mode
playground = "smithery.cli.playground:main" # Run server with interactive testing playground

[tool.uv]
package = true

[tool.smithery]
server = "index:create_server" # Function that returns a patched FastMCP server
log_level = "warning" # Production log level (optional, defaults to "warning")